tests/specs/check/ambient_declare_module_sibling/bar_type_error.ts
import { foo } from "foo";

const value: string = foo;
